# AI-Insight

./: .gitignore  README.md  clean_git_history.sh  fix_push_issue.md  pyproject.toml  quick_fix.sh  requirements.txt
L1-AIBasic/: basic.md
L1-Agent/demo/multi_agent_codegen/: PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  __init__.py  config.py  coordinator.py  main.py  requirements.txt
L1-Agent/demo/multi_agent_codegen/agents/: __init__.py  architect_agent.py  base_agent.py  coder_agent.py  requirement_agent.py  reviewer_agent.py  tester_agent.py
L1-Agent/docs/: AgentPractice.md  docs.md
L1-Agent/src/AgentPractice/: CHAPTER_GUIDE.md  config.py
L1-Agent/src/AgentPractice/第七章/: Agent算法.py  autogen_demo.py  babyagi_example.py  camel.py  inventory_agent.py  requirements.txt
L1-Agent/src/AgentPractice/第三章/: openai_test_01.py  openai_test_02.py  (+1 more)
L1-OpenSourceProject/: doc.md
L1-RAG/: docs.md
L1-RAG/demo/hr_policy_rag/: PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  __init__.py  config.py  document_loader.py  main.py  rag_chain.py  requirements.txt  vector_store.py
L2-Business/: first-AI信息源构建.md
L2-Business/商业视角培养/: 人际星链.md
L2-Business/落地案例分析/大模型落地应用案例/: fifth.md  first.md  forth.md  second.md  third.md
L2-Business/行业研究报告/: 2024中国AI商业落地投资价值研究报告.md  docs.md  中国人工智能产业白皮书.md  沙利文·2023年AI大模型应用研究报告.md  甲子光年·2024中国AI Agent行业研究报告.md  阿里研究院：2024大模型训练数据白皮书-32页.pdf.md
L3-Interview/: AI公司.md  就业市场与实践.md  面试内容与资料.md
L4-AI-empowerment/: 日常工作赋能.md  清华大学Deepseek赋能.md
L4-AI-empowerment/AI赋能测试/: docs.md
L5-StudyRoad/: Arxiv.md  book.md  docs.md  给非专业人士入门资料.md
(+11 files in other folders)
